--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,4 @@ jobs:
       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
         
     - name: Pusing HelloWorldApp to Docker Hub
-      run: docker push helloworld_app:1.0
+      run: docker push ${{secrets.DOCKER_USER}}/helloworld_app:1.0
