--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Building HelloWorldApp Docker image
-      run: docker build -t helloworld_app:1.0 .
+      run: docker build -t ${{secrets.DOCKER_USER}}/helloworld_app:1.0 .
       
       #To Debug
     - name: Running HelloWorldApp and removing it from workspace after running
-      run: docker run --rm helloworld_app:1.0
+      run: docker run --rm ${{secrets.DOCKER_USER}}/helloworld_app:1.0
       
       #To Push Image to Docker Hub
     - name: Docker Hub Login
